# todoapp_ci_cd

./: docker-compose.yaml
.github/: dependabot.yml
.github/workflows/: to_be-pipeline.yaml  todo_be-pipeline.yaml  todo_fe-pipeline.yaml
bruno/: bruno.json
bruno/Todos/: complete.bru  create.bru  delete.bru  get.bru  list.bru  update.bru
bruno/Utilities/: Healtcheck.bru
bruno/environments/: Local.bru
todo_be/: .dockerignore  app.Dockerfile  migrations.Dockerfile  pyproject.toml
todo_be/alembic/: env.py
todo_be/alembic/versions/: 45e772751164_added.py  46d2a0174c4d_added.py  aa7fa93b2c06_added_todo_table.py  b152346b94ca_added_autoincrement.py
todo_be/resources/: db.conf  log.conf
todo_be/tests/: fake_test.py
todo_be/todo_be/: main.py
todo_be/todo_be/core/: __init__.py  logger.py
todo_be/todo_be/core/config/: config.py  db_config.py  log_config.py
todo_be/todo_be/core/constants/: __init__.py
todo_be/todo_be/db/: database.py
todo_be/todo_be/db/dao/: base.py  todo_dao.py
todo_be/todo_be/db/tables/: __init__.py  todo.py
todo_be/todo_be/models/dto/: base.py  healthz.py  todo.py  version.py
todo_be/todo_be/routes/: healthcheck.py  todo.py  version.py
todo_be/todo_be/services/: todo.py
todo_fe/: Dockerfile  package-lock.json  package.json
todo_fe/src/app/: layout.js  page.js
todo_fe/src/components/: todoTile.js  todolist.js  version.js
