[tool.poetry]
name = "todo-be"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"
sqlalchemy = "^2.0.32"
pydantic-settings = "^2.5.2"
psycopg2 = "^2.9.9"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.2"
pytest = "^8.3.2"


[tool.poetry.group.migrations.dependencies]
alembic = "^1.13.2"
sqlalchemy = "^2.0.32"
pydantic = "^2.8.2"
pydantic-settings = "^2.5.2"
psycopg2 = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [".venv", "alembic"]
required-version = ">=0.3.5"
# change the default line length number or characters.
line-length = 88

[tool.ruff.format]
exclude = [".venv", "alembic"]
quote-style = "single"
indent-style = "space"
docstring-code-format = true